<resources>
    <string name="app_name">Göndər Getsin</string>
    <string name="message">Təşəkkür edirik</string>
    <string name="cmt_field">Qeydiniz varsa əlavə edin</string>
    <string name="ok_btn">OK</string>
    <string name="cnt_name_field">Adınız</string>
    <string name="cnt_phone_field">Telefon</string>
    <string name="cnt_mail_field">E-Mail</string>
    <string name="date_info_text">Zəhmət olmasa tarixi seçin</string>
    <string name="main_send_btn">Göndərirəm</string>
    <string name="main_go_btn">Gedirəm</string>
    <string name="main_to_aze_btn">Azərbaycana</string>
    <string name="main_to_ger_btn">Almaniyaya</string>
    <string name="snd_date_btn">Bu vaxt</string>
    <string name="snd_all_btn">Gedənlər</string>
    <string name="cnt_cmt">Qeyd</string>
    <string name="cnt_destination">Gedir</string>
    <string name="cnt_date">Tarix</string>
    <string name="add_advert">Azərbaycana</string>
    <string name="snd_advert_btn">Elan yerləşdir</string>
    <string name="trvl_cnt_btn">Bu vaxt</string>
    <string name="trvl_seeker_btn">Göndərənlər</string>
</resources>
