<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/activity_main"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <EditText
            android:id="@+id/contact_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:hint="@string/cnt_name_field"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:maxLength="15"
            android:padding="@dimen/padding"/>

    <EditText
            android:id="@+id/contact_phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:hint="@string/cnt_phone_field"
            android:inputType="phone"
            android:imeOptions="actionDone"
            android:padding="@dimen/padding"/>
    <EditText
            android:id="@+id/contact_mail_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:hint="@string/cnt_mail_field"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:padding="@dimen/padding"/>
    <Button
            android:id="@+id/contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_btn"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:background="@drawable/button_background"
    >
    </Button>

</LinearLayout>
