<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".activities.SenderActivity">
    <Button
            android:text="@string/snd_date_btn"
            android:layout_width="125dp"
            android:layout_height="80dp"
            android:id="@+id/at_this_time" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.499"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp" app:layout_constraintHorizontal_bias="0.187"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textColor="#345CB4"
            android:background="@drawable/button_background"
    />
    <Button
            android:text="@string/snd_all_btn"
            android:layout_width="125dp"
            android:layout_height="80dp"
            android:id="@+id/show_all" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintHorizontal_bias="0.766"
            app:layout_constraintVertical_bias="0.499"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textColor="#345CB4"
            android:background="@drawable/button_background"
    />
    <Button
            android:text="@string/snd_advert_btn"
            android:layout_width="125dp"
            android:layout_height="80dp"
            android:id="@+id/add_advert" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.704"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textColor="#345CB4"
            android:background="@drawable/button_background"
    />

</androidx.constraintlayout.widget.ConstraintLayout>